k8s/infra/test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-test
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames: ["nginx.beans.lan"]
  rules:
    - backendRefs:
        - name: nginx-test
          port: 80
